Add cloud config
